styled project cards and fixed overlapping of components on navbar when scrolling

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -69,6 +69,7 @@
   text-align: center;
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
 
 .navItems {
